k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service.name: default-http-backend
    service.port.number: 80
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /employee
        pathType: ImplementationSpecific
        backend:
          service.name: employee
          service.port.number: 8080
      - path: /department
        pathType: ImplementationSpecific
        backend:
          service.name: department
          service.port.number: 8080
      - path: /organization
        pathType: ImplementationSpecific
        backend:
          service.name: organization
          service.port.number: 8080
